--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,24 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r springboot-hostar-aws2 * # springboot-hostar-aws2 이름으로 압축
+  - mkdir -p deploy # deploy 디렉토리 설정
+  - mv springboot-hosatr-aws2.zip deploy/springboot-hostar-aws2.zip # springboot-hosatr-aws2.zip를 해당 디렉토리로 이동
+
+deploy: # S3로 파일 업로드 혹은 CodeDeploy로 배포 등 외부 서비스와 연동될 행위들을 선언
+  -provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+
+  bucket: springboot-hostar-build
+  region: ap-northeast-2
+  skip_cleanup: true
+
+  acl: private # zip 파일 접근을 private으로
+  local_dir: deploy # before_deploy에서 생성한 디렉토리 , 해당 위치의 파일들만 S3로 전송
+  wait-untill-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
