--- a/appspec.yml
+++ b/appspec.yml
@@ -6,3 +6,16 @@ files:
     overwrite: yes # 기존에 있는 파일을 덮어 씌운다.
 
 
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  ApplicationStart:
+    - location: deploy.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전의 스프링 부트를 시작합니다.
+      timeout: 60
+      runas: ec2-user
+
+
