--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,17 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r springboot-hostar-aws2 ./* # springboot-hostar-aws2 이름으로 압축
-  - mkdir -p deploy # deploy 디렉토리 설정
-  - mv springboot-hostar-aws2.zip deploy/springboot-hostar-aws2.zip # springboot-hosatr-aws2.zip를 해당 디렉토리로 이동
+  # - zip -r springboot-hostar-aws2 ./* # springboot-hostar-aws2 이름으로 압축
+  # - mkdir -p deploy # deploy 디렉토리 설정
+  # - mv springboot-hostar-aws2.zip deploy/springboot-hostar-aws2.zip # springboot-hosatr-aws2.zip를 해당 디렉토리로 이동
+
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy ./* # before-deploy로 이동후 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/springboot-hostar-aws2_deploy.zip # deploy로 zip파일 이동
 
 deploy: # S3로 파일 업로드 혹은 CodeDeploy로 배포 등 외부 서비스와 연동될 행위들을 선언
   - provider: s3
